// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`feedback email template snapshots > case-partial — HTML output is stable 1`] = `
"<!doctype html>
<html lang="en">
<head>
  <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width,initial-scale=1" />
  <meta name="x-apple-disable-message-reformatting" />
  <meta name="color-scheme" content="light only" />
  <meta name="supported-color-schemes" content="light" />
  <title>Quality Feedback – Aisha Kumar – Score 68.80 / 100</title>
  <style>
    @media only screen and (max-width:620px){
      .container{width:100% !important;border-radius:0 !important;}
      .px{padding-left:16px !important;padding-right:16px !important;}
    }
  </style>
</head>
<body style="margin:0;padding:0;background:#f4f6f8;">
  <div style="display:none;max-height:0;overflow:hidden;opacity:0;color:transparent;">Quality Feedback  · Snapshot — case-partial · 68.80 / 100</div>
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#f4f6f8;">
    <tr><td align="center" style="padding:24px 12px;">
      <table role="presentation" class="container" width="640" cellpadding="0" cellspacing="0" style="width:640px;max-width:640px;background:#ffffff;border-radius:14px;overflow:hidden;box-shadow:0 4px 20px rgba(15,23,42,.06);">

        <tr><td class="px" style="padding:20px 24px;border-bottom:1px solid #e5e7eb;background:#ffffff;">
          
    <table role="presentation" cellpadding="0" cellspacing="0"><tr>
      
      <td style="vertical-align:middle;">
        <div style="font:800 20px/1.15 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;letter-spacing:-0.01em;">QualiPulse</div>
        <div style="margin-top:2px;font:12px/1.3 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;">Quality Feedback and Performance Management</div>
      </td>
    </tr></table>
        </td></tr>

        

        <tr><td class="px" style="padding:18px 24px 0;">
          <div style="font:800 18px/1.25 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">Snapshot — case-partial</div>
          <div style="margin-top:8px;font:14.5px/1.65 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#334155;">Hello Aisha, a quality evaluation has been completed for your recent Case interaction.</div>
        </td></tr>

        
    <tr><td style="padding:14px 24px 4px;">
      <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
        
        <tr>
    <td style="padding:4px 12px 4px 0;font:12px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;white-space:nowrap;vertical-align:top;width:1%;">Feedback Title</td>
    <td style="padding:4px 0;font:600 13px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;vertical-align:top;">Snapshot — case-partial</td>
  </tr>
        <tr>
    <td style="padding:4px 12px 4px 0;font:12px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;white-space:nowrap;vertical-align:top;width:1%;">Agent</td>
    <td style="padding:4px 0;font:600 13px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;vertical-align:top;">Aisha Kumar</td>
  </tr>
        <tr>
    <td style="padding:4px 12px 4px 0;font:12px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;white-space:nowrap;vertical-align:top;width:1%;">Interaction Type</td>
    <td style="padding:4px 0;font:600 13px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;vertical-align:top;">Case</td>
  </tr>
        
      </table>
    </td></tr>
        
    <tr><td style="padding:16px 24px 4px;">
      <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:linear-gradient(180deg,#eef2ff,#ffffff);border:1px solid #e5e7eb;border-radius:12px;">
        <tr><td align="center" style="padding:18px 16px;">
          <div style="font:700 11px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.14em;text-transform:uppercase;color:#4f46e5;">Overall Quality Score</div>
          <div style="margin-top:8px;font:800 30px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;">68.80 / 100</div>
          <div style="margin-top:6px;font:600 12px/1.2 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;letter-spacing:.04em;text-transform:uppercase;">Critical Improvement Required</div>
        </td></tr>
      </table>
    </td></tr>
        
    <tr><td style="padding:14px 24px 4px;">
      <div style="font:700 12px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.12em;text-transform:uppercase;color:#64748b;margin-bottom:8px;">Quality Evaluation</div>
      <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="border-collapse:collapse;border:1px solid #e5e7eb;border-radius:10px;overflow:hidden;">
        <thead>
          <tr style="background:#eef2ff;">
            <th align="left"  style="padding:10px 12px;font:700 11px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.1em;text-transform:uppercase;color:#334155;border-bottom:1px solid #e5e7eb;">Evaluation Criteria</th>
            <th align="right" style="padding:10px 14px;font:700 11px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.1em;text-transform:uppercase;color:#334155;border-bottom:1px solid #e5e7eb;">Score</th>
          </tr>
        </thead>
        <tbody>
          
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Accuracy &amp; Quality</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">18 / 20</td>
        </tr>
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Understanding Customer Requirements</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">15 / 25</td>
        </tr>
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Customer Satisfaction (CSAT)</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">5 / 5</td>
        </tr>
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Product Knowledge &amp; Resolution</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">9 / 20</td>
        </tr>
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Average Handling Time (AHT)</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#1d4ed8;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">8.80 / 10</td>
        </tr>
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Policy &amp; Process Compliance</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">10 / 10</td>
        </tr>
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Technical Accuracy / Issue Handling</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">3 / 10</td>
        </tr>
          <tr style="background:#f8fafc;">
            <td style="padding:14px 12px;font:800 14px/1.3 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">Overall Score</td>
            <td align="right" style="padding:14px;font:800 15px/1.3 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;">68.80 / 100</td>
          </tr>
        </tbody>
      </table>
    </td></tr>

        
        
    <tr><td style="padding:14px 24px 4px;">
      <div style="font:700 12px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.12em;text-transform:uppercase;color:#64748b;margin-bottom:6px;">Strengths</div>
      <div style="font:14.5px/1.65 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;white-space:pre-wrap;">Perfect product knowledge and compliance.</div>
    </td></tr>
        

        
    <tr><td style="padding:14px 24px 4px;">
      <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#fefce8;border:1px solid #fde68a;border-left:4px solid #f59e0b;border-radius:10px;">
        <tr><td style="padding:14px 16px;">
          <div style="font:800 13px/1.2 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#78350f;letter-spacing:.06em;text-transform:uppercase;">Acknowledgement Required</div>
          <div style="margin-top:8px;font:14px/1.6 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            Please review this quality feedback and acknowledge receipt by replying to this email.
          </div>
          
        </td></tr>
      </table>
    </td></tr>

        <tr><td class="px" style="padding:18px 24px 22px;border-top:1px solid #e5e7eb;margin-top:12px;">
          <div style="font:600 13px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;text-align:center;">QualiPulse</div>
        </td></tr>

      </table>
      <div style="max-width:640px;margin:12px auto 0;padding:0 12px;font:11.5px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;text-align:center;">
        
      </div>
    </td></tr>
  </table>
  <img src="https://example.test/api/public/track/open/snapshot-case-partial" width="1" height="1" alt="" style="display:none;width:1px;height:1px;border:0;" />
</body>
</html>"
`;

exports[`feedback email template snapshots > case-partial — plain-text output is stable 1`] = `
"QualiPulse

Snapshot — case-partial
Agent: Aisha Kumar
Interaction Type: Case


Overall Quality Score: 68.80 / 100 (Critical Improvement Required)

Quality Evaluation:
  Accuracy & Quality                       18 / 20
  Understanding Customer Requirements      15 / 25
  Customer Satisfaction (CSAT)             5 / 5
  Product Knowledge & Resolution           9 / 20
  Average Handling Time (AHT)              8.80 / 10
  Policy & Process Compliance              10 / 10
  Technical Accuracy / Issue Handling      3 / 10
  Overall Score                            68.80 / 100

Strengths
Perfect product knowledge and compliance.

Acknowledgement Required
Please review this quality feedback and acknowledge receipt by replying to this email.


QualiPulse"
`;

exports[`feedback email template snapshots > case-partial — subject line is stable 1`] = `"Quality Feedback – Aisha Kumar – Score 68.80 / 100"`;

exports[`feedback email template snapshots > case-perfect — HTML output is stable 1`] = `
"<!doctype html>
<html lang="en">
<head>
  <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width,initial-scale=1" />
  <meta name="x-apple-disable-message-reformatting" />
  <meta name="color-scheme" content="light only" />
  <meta name="supported-color-schemes" content="light" />
  <title>Quality Feedback – Aisha Kumar – Score 100 / 100</title>
  <style>
    @media only screen and (max-width:620px){
      .container{width:100% !important;border-radius:0 !important;}
      .px{padding-left:16px !important;padding-right:16px !important;}
    }
  </style>
</head>
<body style="margin:0;padding:0;background:#f4f6f8;">
  <div style="display:none;max-height:0;overflow:hidden;opacity:0;color:transparent;">Quality Feedback  · Snapshot — case-perfect · 100 / 100</div>
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#f4f6f8;">
    <tr><td align="center" style="padding:24px 12px;">
      <table role="presentation" class="container" width="640" cellpadding="0" cellspacing="0" style="width:640px;max-width:640px;background:#ffffff;border-radius:14px;overflow:hidden;box-shadow:0 4px 20px rgba(15,23,42,.06);">

        <tr><td class="px" style="padding:20px 24px;border-bottom:1px solid #e5e7eb;background:#ffffff;">
          
    <table role="presentation" cellpadding="0" cellspacing="0"><tr>
      
      <td style="vertical-align:middle;">
        <div style="font:800 20px/1.15 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;letter-spacing:-0.01em;">QualiPulse</div>
        <div style="margin-top:2px;font:12px/1.3 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;">Quality Feedback and Performance Management</div>
      </td>
    </tr></table>
        </td></tr>

        

        <tr><td class="px" style="padding:18px 24px 0;">
          <div style="font:800 18px/1.25 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">Snapshot — case-perfect</div>
          <div style="margin-top:8px;font:14.5px/1.65 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#334155;">Hello Aisha, a quality evaluation has been completed for your recent Case interaction.</div>
        </td></tr>

        
    <tr><td style="padding:14px 24px 4px;">
      <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
        
        <tr>
    <td style="padding:4px 12px 4px 0;font:12px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;white-space:nowrap;vertical-align:top;width:1%;">Feedback Title</td>
    <td style="padding:4px 0;font:600 13px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;vertical-align:top;">Snapshot — case-perfect</td>
  </tr>
        <tr>
    <td style="padding:4px 12px 4px 0;font:12px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;white-space:nowrap;vertical-align:top;width:1%;">Agent</td>
    <td style="padding:4px 0;font:600 13px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;vertical-align:top;">Aisha Kumar</td>
  </tr>
        <tr>
    <td style="padding:4px 12px 4px 0;font:12px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;white-space:nowrap;vertical-align:top;width:1%;">Interaction Type</td>
    <td style="padding:4px 0;font:600 13px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;vertical-align:top;">Case</td>
  </tr>
        
      </table>
    </td></tr>
        
    <tr><td style="padding:16px 24px 4px;">
      <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:linear-gradient(180deg,#eef2ff,#ffffff);border:1px solid #e5e7eb;border-radius:12px;">
        <tr><td align="center" style="padding:18px 16px;">
          <div style="font:700 11px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.14em;text-transform:uppercase;color:#4f46e5;">Overall Quality Score</div>
          <div style="margin-top:8px;font:800 30px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;">100 / 100</div>
          <div style="margin-top:6px;font:600 12px/1.2 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;letter-spacing:.04em;text-transform:uppercase;">Excellent</div>
        </td></tr>
      </table>
    </td></tr>
        
    <tr><td style="padding:14px 24px 4px;">
      <div style="font:700 12px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.12em;text-transform:uppercase;color:#64748b;margin-bottom:8px;">Quality Evaluation</div>
      <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="border-collapse:collapse;border:1px solid #e5e7eb;border-radius:10px;overflow:hidden;">
        <thead>
          <tr style="background:#eef2ff;">
            <th align="left"  style="padding:10px 12px;font:700 11px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.1em;text-transform:uppercase;color:#334155;border-bottom:1px solid #e5e7eb;">Evaluation Criteria</th>
            <th align="right" style="padding:10px 14px;font:700 11px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.1em;text-transform:uppercase;color:#334155;border-bottom:1px solid #e5e7eb;">Score</th>
          </tr>
        </thead>
        <tbody>
          
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Accuracy &amp; Quality</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">20 / 20</td>
        </tr>
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Understanding Customer Requirements</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">25 / 25</td>
        </tr>
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Customer Satisfaction (CSAT)</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">5 / 5</td>
        </tr>
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Product Knowledge &amp; Resolution</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">20 / 20</td>
        </tr>
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Average Handling Time (AHT)</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">10 / 10</td>
        </tr>
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Policy &amp; Process Compliance</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">10 / 10</td>
        </tr>
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Technical Accuracy / Issue Handling</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">10 / 10</td>
        </tr>
          <tr style="background:#f8fafc;">
            <td style="padding:14px 12px;font:800 14px/1.3 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">Overall Score</td>
            <td align="right" style="padding:14px;font:800 15px/1.3 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;">100 / 100</td>
          </tr>
        </tbody>
      </table>
    </td></tr>

        
        
        

        
    <tr><td style="padding:14px 24px 4px;">
      <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#fefce8;border:1px solid #fde68a;border-left:4px solid #f59e0b;border-radius:10px;">
        <tr><td style="padding:14px 16px;">
          <div style="font:800 13px/1.2 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#78350f;letter-spacing:.06em;text-transform:uppercase;">Acknowledgement Required</div>
          <div style="margin-top:8px;font:14px/1.6 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            Please review this quality feedback and acknowledge receipt by replying to this email.
          </div>
          
        </td></tr>
      </table>
    </td></tr>

        <tr><td class="px" style="padding:18px 24px 22px;border-top:1px solid #e5e7eb;margin-top:12px;">
          <div style="font:600 13px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;text-align:center;">QualiPulse</div>
        </td></tr>

      </table>
      <div style="max-width:640px;margin:12px auto 0;padding:0 12px;font:11.5px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;text-align:center;">
        
      </div>
    </td></tr>
  </table>
  <img src="https://example.test/api/public/track/open/snapshot-case-perfect" width="1" height="1" alt="" style="display:none;width:1px;height:1px;border:0;" />
</body>
</html>"
`;

exports[`feedback email template snapshots > case-perfect — plain-text output is stable 1`] = `
"QualiPulse

Snapshot — case-perfect
Agent: Aisha Kumar
Interaction Type: Case


Overall Quality Score: 100 / 100 (Excellent)

Quality Evaluation:
  Accuracy & Quality                       20 / 20
  Understanding Customer Requirements      25 / 25
  Customer Satisfaction (CSAT)             5 / 5
  Product Knowledge & Resolution           20 / 20
  Average Handling Time (AHT)              10 / 10
  Policy & Process Compliance              10 / 10
  Technical Accuracy / Issue Handling      10 / 10
  Overall Score                            100 / 100

Acknowledgement Required
Please review this quality feedback and acknowledge receipt by replying to this email.


QualiPulse"
`;

exports[`feedback email template snapshots > case-perfect — subject line is stable 1`] = `"Quality Feedback – Aisha Kumar – Score 100 / 100"`;

exports[`feedback email template snapshots > case-zero — HTML output is stable 1`] = `
"<!doctype html>
<html lang="en">
<head>
  <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width,initial-scale=1" />
  <meta name="x-apple-disable-message-reformatting" />
  <meta name="color-scheme" content="light only" />
  <meta name="supported-color-schemes" content="light" />
  <title>Quality Feedback – Aisha Kumar – Score 0 / 100</title>
  <style>
    @media only screen and (max-width:620px){
      .container{width:100% !important;border-radius:0 !important;}
      .px{padding-left:16px !important;padding-right:16px !important;}
    }
  </style>
</head>
<body style="margin:0;padding:0;background:#f4f6f8;">
  <div style="display:none;max-height:0;overflow:hidden;opacity:0;color:transparent;">Quality Feedback  · Snapshot — case-zero · 0 / 100</div>
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#f4f6f8;">
    <tr><td align="center" style="padding:24px 12px;">
      <table role="presentation" class="container" width="640" cellpadding="0" cellspacing="0" style="width:640px;max-width:640px;background:#ffffff;border-radius:14px;overflow:hidden;box-shadow:0 4px 20px rgba(15,23,42,.06);">

        <tr><td class="px" style="padding:20px 24px;border-bottom:1px solid #e5e7eb;background:#ffffff;">
          
    <table role="presentation" cellpadding="0" cellspacing="0"><tr>
      
      <td style="vertical-align:middle;">
        <div style="font:800 20px/1.15 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;letter-spacing:-0.01em;">QualiPulse</div>
        <div style="margin-top:2px;font:12px/1.3 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;">Quality Feedback and Performance Management</div>
      </td>
    </tr></table>
        </td></tr>

        

        <tr><td class="px" style="padding:18px 24px 0;">
          <div style="font:800 18px/1.25 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">Snapshot — case-zero</div>
          <div style="margin-top:8px;font:14.5px/1.65 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#334155;">Hello Aisha, a quality evaluation has been completed for your recent Case interaction.</div>
        </td></tr>

        
    <tr><td style="padding:14px 24px 4px;">
      <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
        
        <tr>
    <td style="padding:4px 12px 4px 0;font:12px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;white-space:nowrap;vertical-align:top;width:1%;">Feedback Title</td>
    <td style="padding:4px 0;font:600 13px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;vertical-align:top;">Snapshot — case-zero</td>
  </tr>
        <tr>
    <td style="padding:4px 12px 4px 0;font:12px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;white-space:nowrap;vertical-align:top;width:1%;">Agent</td>
    <td style="padding:4px 0;font:600 13px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;vertical-align:top;">Aisha Kumar</td>
  </tr>
        <tr>
    <td style="padding:4px 12px 4px 0;font:12px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;white-space:nowrap;vertical-align:top;width:1%;">Interaction Type</td>
    <td style="padding:4px 0;font:600 13px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;vertical-align:top;">Case</td>
  </tr>
        
      </table>
    </td></tr>
        
    <tr><td style="padding:16px 24px 4px;">
      <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:linear-gradient(180deg,#eef2ff,#ffffff);border:1px solid #e5e7eb;border-radius:12px;">
        <tr><td align="center" style="padding:18px 16px;">
          <div style="font:700 11px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.14em;text-transform:uppercase;color:#4f46e5;">Overall Quality Score</div>
          <div style="margin-top:8px;font:800 30px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;">0 / 100</div>
          <div style="margin-top:6px;font:600 12px/1.2 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;letter-spacing:.04em;text-transform:uppercase;">Critical Improvement Required</div>
        </td></tr>
      </table>
    </td></tr>
        
    <tr><td style="padding:14px 24px 4px;">
      <div style="font:700 12px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.12em;text-transform:uppercase;color:#64748b;margin-bottom:8px;">Quality Evaluation</div>
      <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="border-collapse:collapse;border:1px solid #e5e7eb;border-radius:10px;overflow:hidden;">
        <thead>
          <tr style="background:#eef2ff;">
            <th align="left"  style="padding:10px 12px;font:700 11px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.1em;text-transform:uppercase;color:#334155;border-bottom:1px solid #e5e7eb;">Evaluation Criteria</th>
            <th align="right" style="padding:10px 14px;font:700 11px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.1em;text-transform:uppercase;color:#334155;border-bottom:1px solid #e5e7eb;">Score</th>
          </tr>
        </thead>
        <tbody>
          
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Accuracy &amp; Quality</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">0 / 20</td>
        </tr>
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Understanding Customer Requirements</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">0 / 25</td>
        </tr>
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Customer Satisfaction (CSAT)</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">0 / 5</td>
        </tr>
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Product Knowledge &amp; Resolution</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">0 / 20</td>
        </tr>
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Average Handling Time (AHT)</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">0 / 10</td>
        </tr>
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Policy &amp; Process Compliance</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">0 / 10</td>
        </tr>
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Technical Accuracy / Issue Handling</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">0 / 10</td>
        </tr>
          <tr style="background:#f8fafc;">
            <td style="padding:14px 12px;font:800 14px/1.3 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">Overall Score</td>
            <td align="right" style="padding:14px;font:800 15px/1.3 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;">0 / 100</td>
          </tr>
        </tbody>
      </table>
    </td></tr>

        
        
        

        
    <tr><td style="padding:14px 24px 4px;">
      <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#fefce8;border:1px solid #fde68a;border-left:4px solid #f59e0b;border-radius:10px;">
        <tr><td style="padding:14px 16px;">
          <div style="font:800 13px/1.2 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#78350f;letter-spacing:.06em;text-transform:uppercase;">Acknowledgement Required</div>
          <div style="margin-top:8px;font:14px/1.6 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            Please review this quality feedback and acknowledge receipt by replying to this email.
          </div>
          
        </td></tr>
      </table>
    </td></tr>

        <tr><td class="px" style="padding:18px 24px 22px;border-top:1px solid #e5e7eb;margin-top:12px;">
          <div style="font:600 13px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;text-align:center;">QualiPulse</div>
        </td></tr>

      </table>
      <div style="max-width:640px;margin:12px auto 0;padding:0 12px;font:11.5px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;text-align:center;">
        
      </div>
    </td></tr>
  </table>
  <img src="https://example.test/api/public/track/open/snapshot-case-zero" width="1" height="1" alt="" style="display:none;width:1px;height:1px;border:0;" />
</body>
</html>"
`;

exports[`feedback email template snapshots > case-zero — plain-text output is stable 1`] = `
"QualiPulse

Snapshot — case-zero
Agent: Aisha Kumar
Interaction Type: Case


Overall Quality Score: 0 / 100 (Critical Improvement Required)

Quality Evaluation:
  Accuracy & Quality                       0 / 20
  Understanding Customer Requirements      0 / 25
  Customer Satisfaction (CSAT)             0 / 5
  Product Knowledge & Resolution           0 / 20
  Average Handling Time (AHT)              0 / 10
  Policy & Process Compliance              0 / 10
  Technical Accuracy / Issue Handling      0 / 10
  Overall Score                            0 / 100

Acknowledgement Required
Please review this quality feedback and acknowledge receipt by replying to this email.


QualiPulse"
`;

exports[`feedback email template snapshots > case-zero — subject line is stable 1`] = `"Quality Feedback – Aisha Kumar – Score 0 / 100"`;

exports[`feedback email template snapshots > chat-decimal — HTML output is stable 1`] = `
"<!doctype html>
<html lang="en">
<head>
  <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width,initial-scale=1" />
  <meta name="x-apple-disable-message-reformatting" />
  <meta name="color-scheme" content="light only" />
  <meta name="supported-color-schemes" content="light" />
  <title>Quality Feedback – Aisha Kumar – Score 81.90 / 100</title>
  <style>
    @media only screen and (max-width:620px){
      .container{width:100% !important;border-radius:0 !important;}
      .px{padding-left:16px !important;padding-right:16px !important;}
    }
  </style>
</head>
<body style="margin:0;padding:0;background:#f4f6f8;">
  <div style="display:none;max-height:0;overflow:hidden;opacity:0;color:transparent;">Quality Feedback  · Snapshot — chat-decimal · 81.90 / 100</div>
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#f4f6f8;">
    <tr><td align="center" style="padding:24px 12px;">
      <table role="presentation" class="container" width="640" cellpadding="0" cellspacing="0" style="width:640px;max-width:640px;background:#ffffff;border-radius:14px;overflow:hidden;box-shadow:0 4px 20px rgba(15,23,42,.06);">

        <tr><td class="px" style="padding:20px 24px;border-bottom:1px solid #e5e7eb;background:#ffffff;">
          
    <table role="presentation" cellpadding="0" cellspacing="0"><tr>
      
      <td style="vertical-align:middle;">
        <div style="font:800 20px/1.15 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;letter-spacing:-0.01em;">QualiPulse</div>
        <div style="margin-top:2px;font:12px/1.3 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;">Quality Feedback and Performance Management</div>
      </td>
    </tr></table>
        </td></tr>

        

        <tr><td class="px" style="padding:18px 24px 0;">
          <div style="font:800 18px/1.25 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">Snapshot — chat-decimal</div>
          <div style="margin-top:8px;font:14.5px/1.65 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#334155;">Hello Aisha, a quality evaluation has been completed for your recent Chat interaction.</div>
        </td></tr>

        
    <tr><td style="padding:14px 24px 4px;">
      <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
        
        <tr>
    <td style="padding:4px 12px 4px 0;font:12px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;white-space:nowrap;vertical-align:top;width:1%;">Feedback Title</td>
    <td style="padding:4px 0;font:600 13px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;vertical-align:top;">Snapshot — chat-decimal</td>
  </tr>
        <tr>
    <td style="padding:4px 12px 4px 0;font:12px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;white-space:nowrap;vertical-align:top;width:1%;">Agent</td>
    <td style="padding:4px 0;font:600 13px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;vertical-align:top;">Aisha Kumar</td>
  </tr>
        <tr>
    <td style="padding:4px 12px 4px 0;font:12px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;white-space:nowrap;vertical-align:top;width:1%;">Interaction Type</td>
    <td style="padding:4px 0;font:600 13px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;vertical-align:top;">Chat</td>
  </tr>
        
      </table>
    </td></tr>
        
    <tr><td style="padding:16px 24px 4px;">
      <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:linear-gradient(180deg,#eef2ff,#ffffff);border:1px solid #e5e7eb;border-radius:12px;">
        <tr><td align="center" style="padding:18px 16px;">
          <div style="font:700 11px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.14em;text-transform:uppercase;color:#4f46e5;">Overall Quality Score</div>
          <div style="margin-top:8px;font:800 30px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#1d4ed8;">81.90 / 100</div>
          <div style="margin-top:6px;font:600 12px/1.2 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;letter-spacing:.04em;text-transform:uppercase;">Good</div>
        </td></tr>
      </table>
    </td></tr>
        
    <tr><td style="padding:14px 24px 4px;">
      <div style="font:700 12px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.12em;text-transform:uppercase;color:#64748b;margin-bottom:8px;">Quality Evaluation</div>
      <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="border-collapse:collapse;border:1px solid #e5e7eb;border-radius:10px;overflow:hidden;">
        <thead>
          <tr style="background:#eef2ff;">
            <th align="left"  style="padding:10px 12px;font:700 11px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.1em;text-transform:uppercase;color:#334155;border-bottom:1px solid #e5e7eb;">Evaluation Criteria</th>
            <th align="right" style="padding:10px 14px;font:700 11px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.1em;text-transform:uppercase;color:#334155;border-bottom:1px solid #e5e7eb;">Score</th>
          </tr>
        </thead>
        <tbody>
          
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Accuracy &amp; Quality</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#1d4ed8;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">17 / 20</td>
        </tr>
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Understanding Customer Requirements</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">22.50 / 25</td>
        </tr>
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Customer Satisfaction (CSAT)</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#a16207;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">3.60 / 5</td>
        </tr>
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Product Knowledge &amp; Resolution</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">13.60 / 20</td>
        </tr>
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Average Handling Time (AHT)</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">9.50 / 10</td>
        </tr>
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Policy &amp; Process Compliance</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#1d4ed8;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">8 / 10</td>
        </tr>
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Technical Accuracy / Issue Handling</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#a16207;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">7.70 / 10</td>
        </tr>
          <tr style="background:#f8fafc;">
            <td style="padding:14px 12px;font:800 14px/1.3 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">Overall Score</td>
            <td align="right" style="padding:14px;font:800 15px/1.3 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#1d4ed8;">81.90 / 100</td>
          </tr>
        </tbody>
      </table>
    </td></tr>

        
    <tr><td style="padding:14px 24px 4px;">
      <div style="font:700 12px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.12em;text-transform:uppercase;color:#64748b;margin-bottom:6px;">Summary</div>
      <div style="font:14.5px/1.65 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;white-space:pre-wrap;">Solid chat with a couple of gaps.</div>
    </td></tr>
        
    <tr><td style="padding:14px 24px 4px;">
      <div style="font:700 12px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.12em;text-transform:uppercase;color:#64748b;margin-bottom:6px;">Strengths</div>
      <div style="font:14.5px/1.65 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;white-space:pre-wrap;">Warm greeting, empathetic tone.</div>
    </td></tr>
        
    <tr><td style="padding:14px 24px 4px;">
      <div style="font:700 12px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.12em;text-transform:uppercase;color:#64748b;margin-bottom:6px;">Areas for Improvement</div>
      <div style="font:14.5px/1.65 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;white-space:pre-wrap;">Slow on issue resolution; missed compliance disclosure.</div>
    </td></tr>

        
    <tr><td style="padding:14px 24px 4px;">
      <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#fefce8;border:1px solid #fde68a;border-left:4px solid #f59e0b;border-radius:10px;">
        <tr><td style="padding:14px 16px;">
          <div style="font:800 13px/1.2 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#78350f;letter-spacing:.06em;text-transform:uppercase;">Acknowledgement Required</div>
          <div style="margin-top:8px;font:14px/1.6 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            Please review this quality feedback and acknowledge receipt by replying to this email.
          </div>
          
        </td></tr>
      </table>
    </td></tr>

        <tr><td class="px" style="padding:18px 24px 22px;border-top:1px solid #e5e7eb;margin-top:12px;">
          <div style="font:600 13px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;text-align:center;">QualiPulse</div>
        </td></tr>

      </table>
      <div style="max-width:640px;margin:12px auto 0;padding:0 12px;font:11.5px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;text-align:center;">
        
      </div>
    </td></tr>
  </table>
  <img src="https://example.test/api/public/track/open/snapshot-chat-decimal" width="1" height="1" alt="" style="display:none;width:1px;height:1px;border:0;" />
</body>
</html>"
`;

exports[`feedback email template snapshots > chat-decimal — plain-text output is stable 1`] = `
"QualiPulse

Snapshot — chat-decimal
Agent: Aisha Kumar
Interaction Type: Chat


Overall Quality Score: 81.90 / 100 (Good)

Quality Evaluation:
  Accuracy & Quality                       17 / 20
  Understanding Customer Requirements      22.50 / 25
  Customer Satisfaction (CSAT)             3.60 / 5
  Product Knowledge & Resolution           13.60 / 20
  Average Handling Time (AHT)              9.50 / 10
  Policy & Process Compliance              8 / 10
  Technical Accuracy / Issue Handling      7.70 / 10
  Overall Score                            81.90 / 100

Summary
Solid chat with a couple of gaps.

Strengths
Warm greeting, empathetic tone.

Areas for Improvement
Slow on issue resolution; missed compliance disclosure.

Acknowledgement Required
Please review this quality feedback and acknowledge receipt by replying to this email.


QualiPulse"
`;

exports[`feedback email template snapshots > chat-decimal — subject line is stable 1`] = `"Quality Feedback – Aisha Kumar – Score 81.90 / 100"`;

exports[`feedback email template snapshots > chat-perfect — HTML output is stable 1`] = `
"<!doctype html>
<html lang="en">
<head>
  <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width,initial-scale=1" />
  <meta name="x-apple-disable-message-reformatting" />
  <meta name="color-scheme" content="light only" />
  <meta name="supported-color-schemes" content="light" />
  <title>Quality Feedback – Aisha Kumar – Score 100 / 100</title>
  <style>
    @media only screen and (max-width:620px){
      .container{width:100% !important;border-radius:0 !important;}
      .px{padding-left:16px !important;padding-right:16px !important;}
    }
  </style>
</head>
<body style="margin:0;padding:0;background:#f4f6f8;">
  <div style="display:none;max-height:0;overflow:hidden;opacity:0;color:transparent;">Quality Feedback  · Snapshot — chat-perfect · 100 / 100</div>
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#f4f6f8;">
    <tr><td align="center" style="padding:24px 12px;">
      <table role="presentation" class="container" width="640" cellpadding="0" cellspacing="0" style="width:640px;max-width:640px;background:#ffffff;border-radius:14px;overflow:hidden;box-shadow:0 4px 20px rgba(15,23,42,.06);">

        <tr><td class="px" style="padding:20px 24px;border-bottom:1px solid #e5e7eb;background:#ffffff;">
          
    <table role="presentation" cellpadding="0" cellspacing="0"><tr>
      
      <td style="vertical-align:middle;">
        <div style="font:800 20px/1.15 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;letter-spacing:-0.01em;">QualiPulse</div>
        <div style="margin-top:2px;font:12px/1.3 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;">Quality Feedback and Performance Management</div>
      </td>
    </tr></table>
        </td></tr>

        

        <tr><td class="px" style="padding:18px 24px 0;">
          <div style="font:800 18px/1.25 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">Snapshot — chat-perfect</div>
          <div style="margin-top:8px;font:14.5px/1.65 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#334155;">Hello Aisha, a quality evaluation has been completed for your recent Chat interaction.</div>
        </td></tr>

        
    <tr><td style="padding:14px 24px 4px;">
      <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
        
        <tr>
    <td style="padding:4px 12px 4px 0;font:12px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;white-space:nowrap;vertical-align:top;width:1%;">Feedback Title</td>
    <td style="padding:4px 0;font:600 13px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;vertical-align:top;">Snapshot — chat-perfect</td>
  </tr>
        <tr>
    <td style="padding:4px 12px 4px 0;font:12px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;white-space:nowrap;vertical-align:top;width:1%;">Agent</td>
    <td style="padding:4px 0;font:600 13px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;vertical-align:top;">Aisha Kumar</td>
  </tr>
        <tr>
    <td style="padding:4px 12px 4px 0;font:12px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;white-space:nowrap;vertical-align:top;width:1%;">Interaction Type</td>
    <td style="padding:4px 0;font:600 13px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;vertical-align:top;">Chat</td>
  </tr>
        
      </table>
    </td></tr>
        
    <tr><td style="padding:16px 24px 4px;">
      <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:linear-gradient(180deg,#eef2ff,#ffffff);border:1px solid #e5e7eb;border-radius:12px;">
        <tr><td align="center" style="padding:18px 16px;">
          <div style="font:700 11px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.14em;text-transform:uppercase;color:#4f46e5;">Overall Quality Score</div>
          <div style="margin-top:8px;font:800 30px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;">100 / 100</div>
          <div style="margin-top:6px;font:600 12px/1.2 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;letter-spacing:.04em;text-transform:uppercase;">Excellent</div>
        </td></tr>
      </table>
    </td></tr>
        
    <tr><td style="padding:14px 24px 4px;">
      <div style="font:700 12px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.12em;text-transform:uppercase;color:#64748b;margin-bottom:8px;">Quality Evaluation</div>
      <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="border-collapse:collapse;border:1px solid #e5e7eb;border-radius:10px;overflow:hidden;">
        <thead>
          <tr style="background:#eef2ff;">
            <th align="left"  style="padding:10px 12px;font:700 11px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.1em;text-transform:uppercase;color:#334155;border-bottom:1px solid #e5e7eb;">Evaluation Criteria</th>
            <th align="right" style="padding:10px 14px;font:700 11px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.1em;text-transform:uppercase;color:#334155;border-bottom:1px solid #e5e7eb;">Score</th>
          </tr>
        </thead>
        <tbody>
          
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Accuracy &amp; Quality</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">20 / 20</td>
        </tr>
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Understanding Customer Requirements</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">25 / 25</td>
        </tr>
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Customer Satisfaction (CSAT)</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">5 / 5</td>
        </tr>
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Product Knowledge &amp; Resolution</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">20 / 20</td>
        </tr>
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Average Handling Time (AHT)</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">10 / 10</td>
        </tr>
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Policy &amp; Process Compliance</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">10 / 10</td>
        </tr>
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Technical Accuracy / Issue Handling</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">10 / 10</td>
        </tr>
          <tr style="background:#f8fafc;">
            <td style="padding:14px 12px;font:800 14px/1.3 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">Overall Score</td>
            <td align="right" style="padding:14px;font:800 15px/1.3 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#047857;">100 / 100</td>
          </tr>
        </tbody>
      </table>
    </td></tr>

        
        
    <tr><td style="padding:14px 24px 4px;">
      <div style="font:700 12px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.12em;text-transform:uppercase;color:#64748b;margin-bottom:6px;">Strengths</div>
      <div style="font:14.5px/1.65 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;white-space:pre-wrap;">Excellent on every parameter.</div>
    </td></tr>
        

        
    <tr><td style="padding:14px 24px 4px;">
      <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#fefce8;border:1px solid #fde68a;border-left:4px solid #f59e0b;border-radius:10px;">
        <tr><td style="padding:14px 16px;">
          <div style="font:800 13px/1.2 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#78350f;letter-spacing:.06em;text-transform:uppercase;">Acknowledgement Required</div>
          <div style="margin-top:8px;font:14px/1.6 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            Please review this quality feedback and acknowledge receipt by replying to this email.
          </div>
          
        </td></tr>
      </table>
    </td></tr>

        <tr><td class="px" style="padding:18px 24px 22px;border-top:1px solid #e5e7eb;margin-top:12px;">
          <div style="font:600 13px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;text-align:center;">QualiPulse</div>
        </td></tr>

      </table>
      <div style="max-width:640px;margin:12px auto 0;padding:0 12px;font:11.5px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;text-align:center;">
        
      </div>
    </td></tr>
  </table>
  <img src="https://example.test/api/public/track/open/snapshot-chat-perfect" width="1" height="1" alt="" style="display:none;width:1px;height:1px;border:0;" />
</body>
</html>"
`;

exports[`feedback email template snapshots > chat-perfect — plain-text output is stable 1`] = `
"QualiPulse

Snapshot — chat-perfect
Agent: Aisha Kumar
Interaction Type: Chat


Overall Quality Score: 100 / 100 (Excellent)

Quality Evaluation:
  Accuracy & Quality                       20 / 20
  Understanding Customer Requirements      25 / 25
  Customer Satisfaction (CSAT)             5 / 5
  Product Knowledge & Resolution           20 / 20
  Average Handling Time (AHT)              10 / 10
  Policy & Process Compliance              10 / 10
  Technical Accuracy / Issue Handling      10 / 10
  Overall Score                            100 / 100

Strengths
Excellent on every parameter.

Acknowledgement Required
Please review this quality feedback and acknowledge receipt by replying to this email.


QualiPulse"
`;

exports[`feedback email template snapshots > chat-perfect — subject line is stable 1`] = `"Quality Feedback – Aisha Kumar – Score 100 / 100"`;

exports[`feedback email template snapshots > chat-zero — HTML output is stable 1`] = `
"<!doctype html>
<html lang="en">
<head>
  <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width,initial-scale=1" />
  <meta name="x-apple-disable-message-reformatting" />
  <meta name="color-scheme" content="light only" />
  <meta name="supported-color-schemes" content="light" />
  <title>Quality Feedback – Aisha Kumar – Score 0 / 100</title>
  <style>
    @media only screen and (max-width:620px){
      .container{width:100% !important;border-radius:0 !important;}
      .px{padding-left:16px !important;padding-right:16px !important;}
    }
  </style>
</head>
<body style="margin:0;padding:0;background:#f4f6f8;">
  <div style="display:none;max-height:0;overflow:hidden;opacity:0;color:transparent;">Quality Feedback  · Snapshot — chat-zero · 0 / 100</div>
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#f4f6f8;">
    <tr><td align="center" style="padding:24px 12px;">
      <table role="presentation" class="container" width="640" cellpadding="0" cellspacing="0" style="width:640px;max-width:640px;background:#ffffff;border-radius:14px;overflow:hidden;box-shadow:0 4px 20px rgba(15,23,42,.06);">

        <tr><td class="px" style="padding:20px 24px;border-bottom:1px solid #e5e7eb;background:#ffffff;">
          
    <table role="presentation" cellpadding="0" cellspacing="0"><tr>
      
      <td style="vertical-align:middle;">
        <div style="font:800 20px/1.15 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;letter-spacing:-0.01em;">QualiPulse</div>
        <div style="margin-top:2px;font:12px/1.3 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;">Quality Feedback and Performance Management</div>
      </td>
    </tr></table>
        </td></tr>

        

        <tr><td class="px" style="padding:18px 24px 0;">
          <div style="font:800 18px/1.25 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">Snapshot — chat-zero</div>
          <div style="margin-top:8px;font:14.5px/1.65 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#334155;">Hello Aisha, a quality evaluation has been completed for your recent Chat interaction.</div>
        </td></tr>

        
    <tr><td style="padding:14px 24px 4px;">
      <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
        
        <tr>
    <td style="padding:4px 12px 4px 0;font:12px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;white-space:nowrap;vertical-align:top;width:1%;">Feedback Title</td>
    <td style="padding:4px 0;font:600 13px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;vertical-align:top;">Snapshot — chat-zero</td>
  </tr>
        <tr>
    <td style="padding:4px 12px 4px 0;font:12px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;white-space:nowrap;vertical-align:top;width:1%;">Agent</td>
    <td style="padding:4px 0;font:600 13px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;vertical-align:top;">Aisha Kumar</td>
  </tr>
        <tr>
    <td style="padding:4px 12px 4px 0;font:12px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;white-space:nowrap;vertical-align:top;width:1%;">Interaction Type</td>
    <td style="padding:4px 0;font:600 13px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;vertical-align:top;">Chat</td>
  </tr>
        
      </table>
    </td></tr>
        
    <tr><td style="padding:16px 24px 4px;">
      <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:linear-gradient(180deg,#eef2ff,#ffffff);border:1px solid #e5e7eb;border-radius:12px;">
        <tr><td align="center" style="padding:18px 16px;">
          <div style="font:700 11px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.14em;text-transform:uppercase;color:#4f46e5;">Overall Quality Score</div>
          <div style="margin-top:8px;font:800 30px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;">0 / 100</div>
          <div style="margin-top:6px;font:600 12px/1.2 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;letter-spacing:.04em;text-transform:uppercase;">Critical Improvement Required</div>
        </td></tr>
      </table>
    </td></tr>
        
    <tr><td style="padding:14px 24px 4px;">
      <div style="font:700 12px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.12em;text-transform:uppercase;color:#64748b;margin-bottom:8px;">Quality Evaluation</div>
      <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="border-collapse:collapse;border:1px solid #e5e7eb;border-radius:10px;overflow:hidden;">
        <thead>
          <tr style="background:#eef2ff;">
            <th align="left"  style="padding:10px 12px;font:700 11px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.1em;text-transform:uppercase;color:#334155;border-bottom:1px solid #e5e7eb;">Evaluation Criteria</th>
            <th align="right" style="padding:10px 14px;font:700 11px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.1em;text-transform:uppercase;color:#334155;border-bottom:1px solid #e5e7eb;">Score</th>
          </tr>
        </thead>
        <tbody>
          
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Accuracy &amp; Quality</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">0 / 20</td>
        </tr>
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Understanding Customer Requirements</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">0 / 25</td>
        </tr>
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Customer Satisfaction (CSAT)</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">0 / 5</td>
        </tr>
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Product Knowledge &amp; Resolution</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">0 / 20</td>
        </tr>
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Average Handling Time (AHT)</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">0 / 10</td>
        </tr>
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Policy &amp; Process Compliance</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">0 / 10</td>
        </tr>
        <tr>
          <td style="padding:11px 12px;font:14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;border-bottom:1px solid #e5e7eb;vertical-align:top;">Technical Accuracy / Issue Handling</td>
          <td align="right" style="padding:11px 14px;font:700 14px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;border-bottom:1px solid #e5e7eb;vertical-align:top;white-space:nowrap;tabular-nums:1;">0 / 10</td>
        </tr>
          <tr style="background:#f8fafc;">
            <td style="padding:14px 12px;font:800 14px/1.3 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">Overall Score</td>
            <td align="right" style="padding:14px;font:800 15px/1.3 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#b91c1c;">0 / 100</td>
          </tr>
        </tbody>
      </table>
    </td></tr>

        
    <tr><td style="padding:14px 24px 4px;">
      <div style="font:700 12px/1 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;letter-spacing:.12em;text-transform:uppercase;color:#64748b;margin-bottom:6px;">Summary</div>
      <div style="font:14.5px/1.65 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;white-space:pre-wrap;">Full miss across the board.</div>
    </td></tr>
        
        

        
    <tr><td style="padding:14px 24px 4px;">
      <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#fefce8;border:1px solid #fde68a;border-left:4px solid #f59e0b;border-radius:10px;">
        <tr><td style="padding:14px 16px;">
          <div style="font:800 13px/1.2 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#78350f;letter-spacing:.06em;text-transform:uppercase;">Acknowledgement Required</div>
          <div style="margin-top:8px;font:14px/1.6 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#0f172a;">
            Please review this quality feedback and acknowledge receipt by replying to this email.
          </div>
          
        </td></tr>
      </table>
    </td></tr>

        <tr><td class="px" style="padding:18px 24px 22px;border-top:1px solid #e5e7eb;margin-top:12px;">
          <div style="font:600 13px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;text-align:center;">QualiPulse</div>
        </td></tr>

      </table>
      <div style="max-width:640px;margin:12px auto 0;padding:0 12px;font:11.5px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;color:#64748b;text-align:center;">
        
      </div>
    </td></tr>
  </table>
  <img src="https://example.test/api/public/track/open/snapshot-chat-zero" width="1" height="1" alt="" style="display:none;width:1px;height:1px;border:0;" />
</body>
</html>"
`;

exports[`feedback email template snapshots > chat-zero — plain-text output is stable 1`] = `
"QualiPulse

Snapshot — chat-zero
Agent: Aisha Kumar
Interaction Type: Chat


Overall Quality Score: 0 / 100 (Critical Improvement Required)

Quality Evaluation:
  Accuracy & Quality                       0 / 20
  Understanding Customer Requirements      0 / 25
  Customer Satisfaction (CSAT)             0 / 5
  Product Knowledge & Resolution           0 / 20
  Average Handling Time (AHT)              0 / 10
  Policy & Process Compliance              0 / 10
  Technical Accuracy / Issue Handling      0 / 10
  Overall Score                            0 / 100

Summary
Full miss across the board.

Acknowledgement Required
Please review this quality feedback and acknowledge receipt by replying to this email.


QualiPulse"
`;

exports[`feedback email template snapshots > chat-zero — subject line is stable 1`] = `"Quality Feedback – Aisha Kumar – Score 0 / 100"`;
